force-app/main/default/objects/Interviewer__c/Interviewer__c.object-meta.xml
<CustomObject>
    <label>Interviewer</label>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interviewer No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>