force-app/main/default/objects/Interviewer__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Interviewers</relationshipLabel>
    <relationshipName>Interviewers</relationshipName>
    <type>Lookup</type>
</CustomField>