force-app/main/default/objects/Interviewer__c/fields/Date_Time_Interview__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Interview__c</fullName>
    <label>Date and Time of Interview</label>
    <type>DateTime</type>
</CustomField>