force-app/main/default/objects/Interviewer__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Job_Application__c.Stage__c</field>
            <operation>notEqual</operation>
            <value>New, Phone Screen, Schedule Interviews, Closed - Position Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Interviewers</relationshipLabel>
    <relationshipName>Interviewers</relationshipName>
    <type>Lookup</type>
</CustomField>