force-app/main/default/objects/Interviewer__c/fields/Legacy_Interviewer_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Interviewer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Interviewer Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>