force-app/main/default/objects/Interviewer__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <label>Observation</label>
    <type>TextArea</type>
</CustomField>