force-app/main/default/objects/Interviewer__c/listViews/Recruiters_Interviewer.listView-meta.xml
<ListView>
    <fullName>Recruiters_Interviewer</fullName>
    <filterScope>Queue</filterScope>
    <label>Recruiters</label>
    <queue>Recruiters</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>