force-app/main/default/objects/Interviewer__c/listViews/RH_Interviewer.listView-meta.xml
<ListView>
    <fullName>RH_Interviewer</fullName>
    <filterScope>Queue</filterScope>
    <label>RH</label>
    <queue>RH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>